PN-18665: Add new GET endpoint for bulk operation details
-Added new API definition in api-internal-pn-service-desk-v1.yaml

-Added new schemas in schemas-pn-service-desk-v1.yaml

-Implemented getOperation service method
